# world-cup-2026-research

./: .env.example  .gitignore  .zenodo.json  DESIGN.md  FREEZE_CHECKLIST.md  PREREGISTRATION.md  README.md  RESULTS.md  REVIEW_SUMMARY.md  THEORY.md  pyproject.toml  requirements.txt
data/: README.md  draw_2026.json
paper/: arxiv_predictions.tex  main.tex  references.bib
results/: convergence.json  decomposition.json  equilibrium.json  info_regime.json  info_regime_format.json  q3_sensitivity.json  r4_freeze_elo.json  r4_freeze_poisson.json  r4_named.json  r4_named_poisson.json  scoring.json  vadv_sensitivity.json
reviewers/: README.md  config.json  rubric.md
reviewers/personas/: domain_skeptic.md  methodologist.md  theorist.md
scripts/: fetch_historical.py  make_figures.py  run_convergence.py  run_decomposition.py  run_equilibrium.py  run_info_regime.py  run_manipulability.py  run_q3_sensitivity.py  run_r4_named.py  run_review.py  run_scoring.py  run_vadv_sensitivity.py
src/wc2026/: __init__.py  bayesian.py  bracket.py  data.py  elo.py  engine.py  equilibrium.py  fit_elo.py  formats.py  manipulability.py  metrics.py  samplers.py  simulator.py
src/wc2026/review/: __init__.py  context.py  env.py  orchestrator.py  personas.py  providers.py  schema.py
tests/: test_bracket.py  test_core.py  test_equilibrium.py  test_review.py
