[project]
name = "wc2026"
version = "0.1.0"
description = "Manipulability and strategyproofness analysis of the 48-team FIFA World Cup expansion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "xgboost",
    "statsmodels",
    "pymc",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "jupyterlab"]
# LLM-as-judge reviewer panel (scripts/run_review.py). Install: uv pip install -e '.[review]'
review = ["anthropic", "openai", "google-genai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc2026"]

[tool.ruff]
line-length = 100
